[package]
name = "luogu-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.2", features = ["derive"]}
inquire = {version = "0.6.1", features = ["editor"]}
rust-i18n = "1.1.4"
once_cell = "1.10.0"
reqwest = { version = "0.11.*", features = ["blocking", "json"] }
loading = "0.3.0"
tokio = "1.27.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
comfy-table = "6.1.4"
